index.html criado pela ana - testes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github - Controle de versão</title>
+    <title>Github - Lista de cursos da Alura</title>
 </head>
 <body>
     <ul>
@@ -13,6 +13,14 @@
         <li> Liha 03 </li>
         <li> Liha 04 </li>
         <li> Liha 05 </li>
+
+        <li>Cursos de Programação</li>
+        <li>HTML, CSS </li>|
+        <li>React </li>
+        <li>Ciência de dados </li>
+        <li>IA para Programação </li>
+        <li>Linux</li>
+
     </ul>
     
 </body>
